deployment/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello_fe
  labels:
    app: hello_fe
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello_fe
  template:
    metadata:
      labels:
        app: hello_fe
    spec:
      containers:
      - name: hello_fe
        image: jfrankenbach/angular_frontend:latest
        ports:
        - containerPort: 4200
