deployment/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hello_fe
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: minikube
    http:
      paths:
      - path: /
        backend:
          serviceName: hello
          servicePort: 4200
